--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -5,12 +5,12 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Right Sidebar - Arcana by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
+    <head>
+        <title>EGPD 2022</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+    </head>
 	<body class="is-preload">
 		<div id="page-wrapper">
 
@@ -100,30 +100,34 @@
 									<!-- Sidebar -->
 
 										<section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
+											<h3>Prepare for #EGPD2022 </h3>
+											<p>Let us try to answer your questions as you get ready for the year's best opportunity to share your research on geothermal energy.</p>
+                                            <li>
+                                            <h3>
+                                                <span class="number">1. </span>
+                                                How can I stay safe from COVID-19?
+                                            </h3>
+                                            
+                                            <div class="numbredContent minHeight">Only fully vaccinated people will attend #EGPD2022 in person in Aachen, Germany. Please check the most updated travel restrictions at <a href="https://www.auswaertiges-amt.de/en/einreiseundaufenthalt/EinreiseUndAufenthalt">COVID-19: entry and quarantine regulations in Germany</a>. </div>
+                                            </li>
+                                            <li>
+                                                <h3>
+                                                <span class="number">2</span>
+                                                How can I exhibit at #EGPD2022?
+                                                </h3>
+                                                <div class="numbredContent minHeight"> Energized and passionate PhD students from around Europe will gather in-person at the EGPD 2022 to connect with colleagues, broaden their knowledge base, participate in fieldwork experiences and embrace the joy of science.</div>
+                                            </li>
+                                            <li>
+                                                <h3>
+                                                <span class="number">4</span>
+                                                What is the cost?
+                                                </h3>
+                                                <div class="numbredContent minHeight">EGPD is completely free of charge! If you are a PhD student and you can't afford the travel expenses please contact us at <a href="info@egpd2022.com">info@egpd2022.com </a> to find out about financial oportunities. <br></div>
+                                            </li>
 											<footer>
 												<a href="#" class="button">Continue Reading</a>
 											</footer>
 										</section>
-
-										<section>
-											<h3>Another Subheading</h3>
-											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit in lectus</a></li>
-												<li><a href="#">Semper mod quis eget mi dolore</a></li>
-												<li><a href="#">Consequat etiam lorem phasellus</a></li>
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
-											</ul>
-											<footer>
-												<a href="#" class="button">More Random Links</a>
-											</footer>
-										</section>
-
 								</div>
 							</div>
 						</div>
@@ -182,19 +186,18 @@
 						</div>
 					</div>
 
-					<!-- Icons -->
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
-						</ul>
+                    <!-- Icons -->
+                        <ul class="icons">
+                            <li><a href="https://twitter.com/EASYGO_ITN?s=20" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                            <li><a href="https://www.facebook.com/EuropeanGeothermalPhdDay" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                            <li><a href="https://www.linkedin.com/groups/12568861/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                            <li><a href="https://www.researchgate.net/project/EASYGO-ITN-Efficiency-and-Safety-in-Geothermal-Operations" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
+                        </ul>
 
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                                <li>&copy; EGPD 2022. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 
