--- a/two-sidebar.html
+++ b/two-sidebar.html
@@ -5,12 +5,12 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Two Sidebar - Arcana by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
+    <head>
+        <title>EGPD 2022</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+    </head>
 	<body class="is-preload">
 		<div id="page-wrapper">
 
@@ -24,26 +24,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Dropdown</a>
-									<ul>
-										<li><a href="#">Lorem dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam sed tempus</a></li>
-										<li>
-											<a href="#">Submenu</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
-									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
+								<li><a href="left-sidebar.html">About</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li class="current"><a href="two-sidebar.html">Two Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
@@ -53,110 +34,88 @@
 				</div>
 
 			<!-- Main -->
-				<section class="wrapper style1">
-					<div class="container">
-						<div class="row gtr-200">
-							<div class="col-3 col-12-narrower">
-								<div id="sidebar1">
+				
+                <!-- Main -->
+                    <section class="wrapper style1">
+                        <div class="container">
+                            <div class="row gtr-200">
+                                <div class="col-8 col-12-narrower">
+                                    <div id="content">
 
-									<!-- Sidebar 1 -->
+                                        <!-- Content -->
 
-										<section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
-											<footer>
-												<a href="#" class="button">Continue Reading</a>
-											</footer>
-										</section>
+                                            <article>
+                                                <header>
+                                                    <h2>Right Sidebar</h2>
+                                                    <p>Sidebar on the right, content on the left.</p>
+                                                </header>
 
-										<section>
-											<h3>Another Subheading</h3>
-											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit lectus</a></li>
-												<li><a href="#">Semper mod quis eget dolore</a></li>
-												<li><a href="#">Consequat lorem phasellus</a></li>
-												<li><a href="#">Amet turpis feugiat amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
-											</ul>
-											<footer>
-												<a href="#" class="button">More Random Links</a>
-											</footer>
-										</section>
+                                                <span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
-								</div>
-							</div>
-							<div class="col-6 col-12-narrower imp-narrower">
-								<div id="content">
+                                                <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
+                                                Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
+                                                Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
+                                                consequat etiam lorem ipsum dolor sit amet nullam.</p>
 
-									<!-- Content -->
+                                                <h3>And Yet Another Subheading</h3>
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
+                                                justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
+                                                ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
+                                                vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
+                                                Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
+                                                rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
+                                                Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
+                                                Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
 
-										<article>
-											<header>
-												<h2>Two Sidebar</h2>
-												<p>Yup. Two sidebars at the same time.</p>
-											</header>
+                                                <p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
+                                                quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
+                                                Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
+                                                fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
+                                                Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
+                                                Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+                                            </article>
 
-											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+                                    </div>
+                                </div>
+                                <div class="col-4 col-12-narrower">
+                                    <div id="sidebar">
 
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam.</p>
+                                        <!-- Sidebar -->
 
-											<h3>And Yet Another Subheading</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
-
-											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
-										</article>
-
-								</div>
-							</div>
-							<div class="col-3 col-12-narrower">
-								<div id="sidebar2">
-
-									<!-- Sidebar 2 -->
-
-										<section>
-											<h3>Another Subheading</h3>
-											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit lectus</a></li>
-												<li><a href="#">Semper mod quis eget dolore</a></li>
-												<li><a href="#">Consequat lorem phasellus</a></li>
-												<li><a href="#">Amet turpis feugiat amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
-											</ul>
-											<footer>
-												<a href="#" class="button">More Random Links</a>
-											</footer>
-										</section>
-
-										<section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
-											<footer>
-												<a href="#" class="button">Continue Reading</a>
-											</footer>
-										</section>
-
-								</div>
-							</div>
-						</div>
-					</div>
-				</section>
+                                            <section>
+                                                <h3>Prepare for #EGPD2022 </h3>
+                                                <p>Let us try to answer your questions as you get ready for the year's best opportunity to share your research on geothermal energy.</p>
+                                                <li>
+                                                <h3>
+                                                    <span class="number">1. </span>
+                                                    How can I stay safe from COVID-19?
+                                                </h3>
+                                                
+                                                <div class="numbredContent minHeight">Only fully vaccinated people will attend #EGPD2022 in person in Aachen, Germany. Please check the most updated travel restrictions at <a href="https://www.auswaertiges-amt.de/en/einreiseundaufenthalt/EinreiseUndAufenthalt">COVID-19: entry and quarantine regulations in Germany</a>. </div>
+                                                </li>
+                                                <li>
+                                                    <h3>
+                                                    <span class="number">2</span>
+                                                    How can I exhibit at #EGPD2022?
+                                                    </h3>
+                                                    <div class="numbredContent minHeight"> Energized and passionate PhD students from around Europe will gather in-person at the EGPD 2022 to connect with colleagues, broaden their knowledge base, participate in fieldwork experiences and embrace the joy of science.</div>
+                                                </li>
+                                                <li>
+                                                    <h3>
+                                                    <span class="number">4</span>
+                                                    What is the cost?
+                                                    </h3>
+                                                    <div class="numbredContent minHeight">EGPD is completely free of charge! If you are a PhD student and you can't afford the travel expenses please contact us at <a href="info@egpd2022.com">info@egpd2022.com </a> to find out about financial oportunities. <br></div>
+                                                </li>
+                                                <footer>
+                                                    <a href="#" class="button">Continue Reading</a>
+                                                </footer>
+                                            </section>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
 			<!-- Footer -->
 				<div id="footer">
@@ -210,19 +169,18 @@
 						</div>
 					</div>
 
-					<!-- Icons -->
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
-						</ul>
+                    <!-- Icons -->
+                        <ul class="icons">
+                            <li><a href="https://twitter.com/EASYGO_ITN?s=20" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                            <li><a href="https://www.facebook.com/EuropeanGeothermalPhdDay" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                            <li><a href="https://www.linkedin.com/groups/12568861/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                            <li><a href="https://www.researchgate.net/project/EASYGO-ITN-Efficiency-and-Safety-in-Geothermal-Operations" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
+                        </ul>
 
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                                <li>&copy; EGPD 2022. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 
