--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>EGPD 2022 <em>organized by <a href="https://easygo-itn.eu">EASYGO</a></em></h2>
+						<h2>#EGPD2022 Aachen<em> organized by <a href="https://easygo-itn.eu">EASYGO</a></em></h2>
 						<a href="about.html" class="button">Learn More</a>
 					</header>
 				</section>
