minimize poster sessions

--- a/about.html
+++ b/about.html
@@ -299,6 +299,7 @@
 						<div class="copyright">
 							<ul class="menu">
                                 <li>&copy; EGPD 2022. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                                <li>Volcanoe Image: <a href="http://unsplash.com">Unsplash</a></li>
 							</ul>
 						</div>
 
