--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                                             </header>
                                             
                                             <article>
+                                                
+                                                <p>The organizing committee of European Geothermal PhD Days (EGPD)-2022 is happy to announce that 13th EGPD will be held in RWTH Aachen, Germany with the collaboration of IDEA League universities of RWTH Aachen, TU Delft, ETH Zurich,  Politecnico di Milano and 10 industry partners. EASYGO Project is funded by the European Commission of Marie Skłodowska - Curie Innovative Training Network (ITN) which stands for Efficiency and Safety in Geothermal Operations. The purpose of the project is to address questions regarding geothermal energy from different perspectives, by integrating geology, geophysics, geochemistry, advanced modeling and process engineering. In this framework, EASYGO is looking forward to training tomorrow’s leading geothermal energy experts.</p>
+
+                                                <p>This year, EGPD will be hosted by RWTH Aachen University between the days of 27th to 29th of April 2022 at the Ford-Saal conference room of C-Building at Templergraben 57, Aachen with the cooperation of the institutes of Engineering Geology and Hydrogeology (EGH) and Computational Geoscience and Reservoir Engineering (CGRE).</p>
 
                                                 <h3>What is EGPD?</h3>
                                                 <p>
