--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
                                         <span class="number">4</span>
                                         What is the cost?
                                         </h3>
-                                        <div class="numbredContent minHeight">EGPD is completely free of charge! If you are a PhD student and you can't afford the travel expenses please contact us at <a href="info@egpd2022.com">info@egpd2022.com </a> to find out about financial oportunities. <br></div>
+                                        <div class="numbredContent minHeight">EGPD is completely free of charge! If you are a PhD student and you can't afford the travel expenses please contact us at <a href="mailto: egpd2022@erdw.ethz.ch"> egpd2022@erdw.ethz.ch </a> to find out about financial oportunities. <br></div>
                                     </li>
                                     <footer>
                                         <a href="#" class="button">Continue Reading</a>
