Update main webstie

--- a/sponsor.html
+++ b/sponsor.html
@@ -47,7 +47,7 @@
                                             <h3>Sponsor oportunity</h3>
                                             <p>Would you like the logo of your company here?</p>
 											<footer>
-												<a href="mailto: egpd2022@erdw.ethz.ch?subject=Sponsor_Inquiry" class="button">You can sponsor this event</a>
+												<a href="mailto: egpd2022@erdw.ethz.ch?subject=Sponsor_Inquiry" class="button">Sponsor</a>
 											</footer>
 										</section>
 
