changing to abstract submission

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li class="current">><a href="about.html">About</a></li>
-                                <li><a href="attend.html">Attend and present</a></li>
+                                <li><a href="attend.html">Abstract Submission</a></li>
                                 <li><a href="schedule.html">Schedule</a></li>
                                 <li><a href="sponsor.html">Sponsor Oportunities</a></li>
                             </ul>
@@ -96,7 +96,7 @@
                                         <div class="numbredContent minHeight">EGPD is completely free of charge! If you are a PhD student and you can't afford the travel expenses please contact us at <a href="mailto: egpd2022@erdw.ethz.ch"> egpd2022@erdw.ethz.ch </a> to find out about financial oportunities. <br></div>
                                     </li>
                                     <footer>
-                                        <a href="#" class="button">Continue Reading</a>
+                                        <a href="mailto: egpd2022@erdw.ethz.ch?subject=question_regarding_funding" class="button">Funding oportunities</a>
                                     </footer>
                                 </section>
 
