--- a/attend.html
+++ b/attend.html
@@ -25,7 +25,7 @@
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
-                                <li class="current"><a href="attend.html">Attend and present</a></li>
+                                <li class="current"><a href="attend.html">Abstract Submission</a></li>
                                 <li><a href="schedule.html">Schedule</a></li>
                                 <li><a href="sponsor.html">Sponsor Oportunities</a></li>
                             </ul>
