something about abstract submission

--- a/about.html
+++ b/about.html
@@ -71,6 +71,12 @@
                                 <!-- Sidebar -->
 
                                 <section>
+                                    <h3>Submissions are open! </h3>
+                                    <p> Submit your abstract before December 16, 2021. </p>
+                                    <footer>
+                                        <a href="attend.html" class="button">Abstract Submission Guidelines</a>
+                                    </footer>
+                                    
                                     <h3>Prepare for #EGPD2022 </h3>
                                     <p>Let us try to answer your questions as you get ready for the year's best opportunity to share your research on geothermal energy.</p>
                                     <li>
