--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
                     <section class="wrapper style2">
                         <div class="container">
                             <header class="major">
-                                <h2>Organizing Comittee</h2>
+                                <h2>Organizing Committee</h2>
                             </header>
                         </div>
                     </section>
