--- a/about.html
+++ b/about.html
@@ -120,6 +120,7 @@
                         <div class="container">
                             <header class="major">
                                 <h2>Organizing Committee</h2>
+                                <p>PhD students of EASYGO ITN Project</p>
                             </header>
                         </div>
                     </section>
