--- a/sponsor.html
+++ b/sponsor.html
@@ -69,7 +69,7 @@
                                             </header>
                                             
                                             <p>
-                                                EGPD is your opportunity to advertise your company to the future leaders in the geothermal energy industry. It is also an oportunity to recruit potential soon to graduate PhD experts, gain customers, and have your brand, product, or service advertise amongst the future of the Geothermal industry. It is also a great oportunity to show the investment that your company s making on the energy transition and to showcase your latest products and solutions. </p>
+                                                EGPD is your opportunity to advertise your company to the future leaders in the geothermal energy industry. It is also an oportunity to recruit potential soon to graduate PhD experts, gain customers, and have your brand, product, or service advertise amongst the future of the Geothermal industry. It is also a great oportunity to show the investment that your company is making on the energy transition and to showcase your latest products and solutions. </p>
 											</header>
 
 
