--- a/about.html
+++ b/about.html
@@ -336,7 +336,7 @@
 						<div class="copyright">
 							<ul class="menu">
                                 <li>&copy; EGPD 2022. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                                <li>Volcanoe Image: <a href="http://unsplash.com">Unsplash</a></li>
+                                <li>Volcanoe Image: <a href="http://unsplash.com">Unsplash</a></li>  <li>RWTH Aachen Univesity information: <a href="https://www.rwth-aachen.de/cms/root/Die-RWTH/Profil/~eng/Reputation/lidx/1/">Main Site</a></li>
 							</ul>
 						</div>
 
