--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                                         <p>EGPD is a way to efficiently spread scientific knowledge related to geothermal energy by making an event that attracts young specialists. It emulates youth in geosciences and provides a framework to make connections in a qualitative way. It provides a dedicated and informal occasion for the PhD students to exchange with their pair and to develop their network.</p>
                                         
 					<header>
-					    <h2> EASYGO ITN Host - RWTH Aaachen University </h2>
+					    <h2> EASYGO ITN Host - RWTH Aachen University </h2>
 						
 					<p>EASYGO ITN is a research framework, funded by the European Commission, that focuses on tackling the geothermal challenges of today and train tomorrow’s leading geothermal energy experts. This framework includes the IDEA League universities TU Delft (TUD), ETH Zurich (ETH), RWTH Aachen University (RWTH), Politecnico di Milano (PoliMi) and 10 industry partners that are addressing this question from different perspectives, integrating geology, geophysics, geochemistry, advanced modeling and process engineering. For more information about the framework and individual projects, visit the <a href="https://easygo-itn.eu/">EASYGO Website</a> </p>
 					</header>
