Added hosts institutions

--- a/about.html
+++ b/about.html
@@ -189,6 +189,8 @@
                                     <div class="inner">
                                         <h3>Mahmoud Eltayieb </h3>
                                         <p>Joint seismic and electromagnetic monitoring system design.</p>
+                                        
+                                        <p>Host Institutions: TU Delft, ETH Zurich, Huisman Equipment BV.</p>
                                     </div>
                                 </div>
                             </section>
@@ -199,6 +201,7 @@
                                     <div class="inner">
                                         <h3>Lorenzo Galieti</h3>
                                         <p>Mixtures as working fluids for geothermal ORC power plants.</p>
+                                        <p>Host Institutions: TU Delft, Politecnico Di Milano, Lu-Ve.</p>
                                     </div>
                                 </div>
                             </section>
@@ -209,6 +212,7 @@
                                     <div class="inner">
                                         <h3>Hagen Söding</h3>
                                         <p>Novel geophysical monitoring options of CO2 injections.</p>
+                                        <p>Host Institutions: ETH Zurich, RWTH Aachen, Nagra </p>
                                     </div>
                                 </div>
                             </section>
@@ -220,6 +224,7 @@
                                         <h3>Nicolás Rangel Jurado
                                             </h3>
                                         <p>Option of using CO2 instead of water as the subsurface energy extraction fluid in EGS and in sedimentary basins.</p>
+                                        <p>Host Institutions: ETH Zurich, RWTH Aachen, Geoenergie Suisse </p>
                                     </div>
                                 </div>
                             </section>
@@ -231,6 +236,7 @@
                                         <h3>Selvican Türkdoğan
                                             </h3>
                                         <p>Heterogeneities in hydraulic-mechanical coupled reservoir properties.</p>
+                                        <p>Host Institutions: RWTH Aachen, ETH Zurich, Geoenergie Suisse </p>
                                     </div>
                                 </div>
                             </section>
@@ -242,6 +248,8 @@
                                         <h3>Josselin Ouf
                                             </h3>
                                         <p>Large scale cooling induced stress changes around deep geothermal reservoirs.</p>
+                                        <p>Host Institutions: RWTH Aachen, TUD, Hydreco Geomec </p>
+
                                     </div>
                                 </div>
                             </section>
@@ -253,6 +261,8 @@
                                         <h3>Ryan Santoso
                                             </h3>
                                         <p>Physics-based machine learning for real-time simulation update.</p>
+                                        <p>Host Institutions: RWTH Aachen, ETH Zurich, Geophysica/ Frauenhofer IEG </p>
+
                                     </div>
                                 </div>
                             </section>
@@ -264,6 +274,8 @@
                                         <h3>Andrea E. Balza Morales
                                            </h3>
                                         <p> Geometry-based joint geological-geophysical inversion.</p>
+                                        <p>Host Institutions: RWTH Aachen, ETH Zurich, Geophysica/ Frauenhofer IEG </p>
+
                                     </div>
                                 </div>
                             </section>
@@ -275,6 +287,8 @@
                                         <h3>Esteban Gómez Diaz
                                             </h3>
                                         <p>Geothermal reservoir characterization of deep limestones in the Rhine-Ruhr region.</p>
+                                        <p>Host Institutions: RWTH Aachen, ETH Zurich, Geophysica/ RWE </p>
+
                                     </div>
                                 </div>
                             </section>
@@ -286,6 +300,8 @@
                                 <h3>Tristan Merbecks
                                    </h3>
                                 <p> Design and operation of a binary ORC plant for the exploitation of different geothermal sources, including two-phase sources.</p>
+                                <p>Host Institutions: PoliMi, ETH Zurich, Turboden</p>
+
                             </div>
                         </div>
                     </section>
