--- a/attend.html
+++ b/attend.html
@@ -27,7 +27,7 @@
                                 <li><a href="about.html">About</a></li>
                                 <li class="current"><a href="attend.html">Abstract Submission</a></li>
                                 <li><a href="schedule.html">Schedule</a></li>
-                                <li><a href="sponsor.html">Sponsor Oportunities</a></li>
+                                <li><a href="sponsor.html">Sponsor Opportunities</a></li>
                             </ul>
                         </nav>
 
@@ -45,7 +45,7 @@
 
                                     <article>
                                         <header>
-                                        <h2>Submit your abstract and enjoy a unique oportunity!</h2>
+                                        <h2>Submit your abstract and enjoy a unique opportunity!</h2>
                                         <p>EGPD has been connecting future PhD students and doctorates for the last decade initiating scientific exchange and hosting excellent research. </p>
                                         </header>
                                         
