--- a/travelandaccomodation.html
+++ b/travelandaccomodation.html
@@ -158,7 +158,8 @@
 							<li><a href="https://www.linkedin.com/groups/12568861/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
                             <li><a href="https://www.researchgate.net/project/EASYGO-ITN-Efficiency-and-Safety-in-Geothermal-Operations" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
 						</ul>
-
+					</div>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2522.8458533955204!2d6.078702!3d50.778431!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c0997979818be5%3A0x7e72a05f6f965dc3!2sRWTH%20Super%20C%20and%20Studierenden%20Sekretariat%2C%20Templergraben%2057%2C%2052062%20Aachen!5e0!3m2!1str!2sde!4v1635456065435!5m2!1str!2sde" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
