--- a/about.html
+++ b/about.html
@@ -45,7 +45,8 @@
 
 			
 			<!-- Banner -->
-				<section id="banner", background-image="images/egpd.png">
+				<section id="banner"> 
+					<div background-image="images/egpd.png">
 					
 					<header>
 						<h2>The schedule of the #EGPD2023 Glasgow will come soon</em></h2>
